--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -67,14 +67,20 @@
             android:indeterminate="true"
             app:hideAnimationBehavior="outward" />
 
-        <rikka.widget.borderview.BorderRecyclerView
-            android:id="@+id/recyclerView"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            app:borderTopVisibility="whenTop"
-            app:borderTopDrawable="@null"
-            app:borderBottomVisibility="never"
-            app:fitSystemWindowsInsets="bottom" />
+            android:id="@+id/swipeRefreshLayout">
+
+            <rikka.widget.borderview.BorderRecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                app:borderTopVisibility="whenTop"
+                app:borderTopDrawable="@null"
+                app:borderBottomVisibility="never"
+                app:fitSystemWindowsInsets="bottom" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
