--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,7 +43,12 @@
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <!-- MIUI -->
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
+        <!-- Preference title -->
+        <item name="android:textAppearanceListItem">?textAppearanceSubtitle1</item>
     </style>
 
     <style name="Theme.Light" parent="Base.AppTheme.Light" />
@@ -70,7 +75,12 @@
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <!-- MIUI -->
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
+        <!-- Preference title -->
+        <item name="android:textAppearanceListItem">?textAppearanceSubtitle1</item>
     </style>
 
     <style name="Theme" parent="Base.AppTheme" />
