[app] Add translators to about dialog (#342)

--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -91,6 +91,14 @@
             android:textSize="14sp"
             tools:text="@string/about_view_source_code" />
 
+        <TextView
+            android:id="@+id/translators"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="?android:textColorSecondary"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </LinearLayout>
