[app] Add more checks for play publishing (#390)
* [app] Add more checks for play publishing

* [app] Fix shortcuts

--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -28,8 +28,8 @@
         android:shortcutShortLabel="@string/Modules">
         <intent
             android:action="android.intent.action.MAIN"
-            android:targetClass="orrg.lsposed.manager.ui.activity.ModulesActivity"
-            android:targetPackage="orrg.lsposed.manager" />
+            android:targetClass="org.lsposed.manager.ui.activity.ModulesActivity"
+            android:targetPackage="org.lsposed.manager" />
     </shortcut>
     <shortcut
         android:enabled="true"
@@ -39,8 +39,8 @@
         android:shortcutShortLabel="@string/Logs">
         <intent
             android:action="android.intent.action.MAIN"
-            android:targetClass="orrg.lsposed.manager.ui.activity.LogsActivity"
-            android:targetPackage="orrg.lsposed.manager" />
+            android:targetClass="org.lsposed.manager.ui.activity.LogsActivity"
+            android:targetPackage="org.lsposed.manager" />
     </shortcut>
     <shortcut
         android:enabled="true"
@@ -50,7 +50,7 @@
         android:shortcutShortLabel="@string/module_repo">
         <intent
             android:action="android.intent.action.MAIN"
-            android:targetClass="orrg.lsposed.manager.ui.activity.RepoActivity"
-            android:targetPackage="orrg.lsposed.manager" />
+            android:targetClass="org.lsposed.manager.ui.activity.RepoActivity"
+            android:targetPackage="org.lsposed.manager" />
     </shortcut>
 </shortcuts>
