[app] Cleanup file provider paths (#393)
* [app] Cleanup file provider paths

* [app] Remove unused files

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -19,11 +19,7 @@
   -->
 
 <paths>
-    <external-cache-path
-        name="downloads"
-        path="/downloads" />
-    <!--suppress AndroidElementNotAllowed -->
-    <root-path
+    <cache-path
         name="log"
-        path="/" />
+        path="." />
 </paths>
