[app] Nuke customized ripple effect (#485)
* [app] Nuke customized ripple effect

* [app] Fix progressbar glitches

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -170,7 +170,7 @@
                             android:layout_height="28dp"
                             android:layout_centerVertical="true"
                             android:contentDescription="@string/Modules"
-                            app:srcCompat="@drawable/ic_modules" />
+                            app:srcCompat="@drawable/ic_extension" />
 
                         <TextView
                             android:id="@+id/modules_title"
