--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -88,6 +88,6 @@
         android:key="show_hidden_icon_apps_enabled"
         android:title="@string/settings_show_hidden_icon_apps_enabled"
         android:persistent="false"
-        android:visible="false" />
+        app:isPreferenceVisible="false" />
     </com.takisoft.preferencex.PreferenceCategory>
 </PreferenceScreen>
