--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -59,4 +59,15 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_baseline_add_24"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        app:layout_fitSystemWindowsInsets="bottom"
+        android:contentDescription="@string/add_module_to_user" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
