--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -24,7 +24,8 @@
     android:layout_height="match_parent"
     app:consumeSystemWindowsInsets="start|end"
     app:edgeToEdge="true"
-    app:fitSystemWindowsInsets="start|end">
+    android:animateLayoutChanges="true"
+    app:fitsSystemWindowsInsets="start|end">
 
     <rikka.material.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -68,6 +69,6 @@
         android:src="@drawable/ic_baseline_add_24"
         android:layout_margin="16dp"
         android:visibility="invisible"
-        app:layout_fitSystemWindowsInsets="bottom"
+        app:layout_fitsSystemWindowsInsets="bottom"
         android:contentDescription="@string/add_module_to_user" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
