--- a/app/src/main/res/layout/item_repo_recyclerview.xml
+++ b/app/src/main/res/layout/item_repo_recyclerview.xml
@@ -28,4 +28,4 @@
     app:borderTopVisibility="whenTop"
     app:borderTopDrawable="@null"
     app:borderBottomVisibility="never"
-    app:fitSystemWindowsInsets="top|bottom" />
+    app:fitsSystemWindowsInsets="top|bottom" />
