[app] Fix module list (#698)

--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -77,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
+                android:scrollbars="none"
                 app:borderTopVisibility="whenTop"
                 app:borderTopDrawable="@null"
                 app:borderBottomVisibility="never"
