--- a/app/src/main/res/layout/item_repo_recyclerview.xml
+++ b/app/src/main/res/layout/item_repo_recyclerview.xml
@@ -25,6 +25,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingTop="104dp"
+    android:scrollbars="none"
     app:borderTopVisibility="whenTop"
     app:borderTopDrawable="@null"
     app:borderBottomVisibility="never"
