--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This file is part of LSPosed.
   ~
   ~ LSPosed is free software: you can redistribute it and/or modify
@@ -25,19 +24,35 @@
     <fragment
         android:id="@+id/main_fragment"
         android:name="org.lsposed.manager.ui.fragment.HomeFragment"
-        android:label="MainFragment" >
+        android:label="MainFragment">
         <action
             android:id="@+id/action_main_fragment_to_settings_fragment"
-            app:destination="@id/settings_fragment" />
+            app:destination="@id/settings_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
         <action
             android:id="@+id/action_main_fragment_to_logs_fragment"
-            app:destination="@id/logs_fragment" />
+            app:destination="@id/logs_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
         <action
             android:id="@+id/action_main_fragment_to_repo_fragment"
-            app:destination="@id/repo_fragment" />
+            app:destination="@id/repo_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
         <action
             android:id="@+id/action_main_fragment_to_modules_fragment"
-            app:destination="@id/modules_fragment" />
+            app:destination="@id/modules_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
     </fragment>
     <fragment
         android:id="@+id/logs_fragment"
@@ -46,13 +61,21 @@
     <fragment
         android:id="@+id/modules_fragment"
         android:name="org.lsposed.manager.ui.fragment.ModulesFragment"
-        android:label="modules" >
+        android:label="modules">
         <action
             android:id="@+id/action_modules_fragment_to_app_list_fragment"
-            app:destination="@id/app_list_fragment" />
+            app:destination="@id/app_list_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
         <action
             android:id="@+id/action_modules_fragment_to_repo_item_fragment"
-            app:destination="@id/repo_item_fragment" />
+            app:destination="@id/repo_item_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
     </fragment>
     <fragment
         android:id="@+id/settings_fragment"
@@ -61,17 +84,65 @@
     <fragment
         android:id="@+id/app_list_fragment"
         android:name="org.lsposed.manager.ui.fragment.AppListFragment"
-        android:label="app_list" />
+        android:label="app_list">
+        <argument
+            android:name="modulePackageName"
+            app:argType="string" />
+
+        <argument
+            android:name="moduleUserId"
+            app:argType="integer" />
+    </fragment>
     <fragment
         android:id="@+id/repo_fragment"
         android:name="org.lsposed.manager.ui.fragment.RepoFragment"
-        android:label="repo" >
+        android:label="repo">
         <action
             android:id="@+id/action_repo_fragment_to_repo_item_fragment"
-            app:destination="@id/repo_item_fragment" />
+            app:destination="@id/repo_item_fragment"
+            app:enterAnim="@anim/fragment_enter"
+            app:exitAnim="@anim/fragment_exit"
+            app:popEnterAnim="@anim/fragment_enter_pop"
+            app:popExitAnim="@anim/fragment_exit_pop" />
     </fragment>
     <fragment
         android:id="@+id/repo_item_fragment"
         android:name="org.lsposed.manager.ui.fragment.RepoItemFragment"
-        android:label="repo_item" />
+        android:label="repo_item" >
+        <argument
+            android:name="modulePackageName"
+            app:argType="string" />
+
+        <argument
+            android:name="moduleName"
+            app:argType="string" />
+    </fragment>
+    <action
+        android:id="@+id/action_settings_fragment"
+        app:destination="@id/settings_fragment"
+        app:enterAnim="@anim/fragment_enter"
+        app:exitAnim="@anim/fragment_exit"
+        app:popEnterAnim="@anim/fragment_enter_pop"
+        app:popExitAnim="@anim/fragment_exit_pop" />
+    <action
+        android:id="@+id/action_logs_fragment"
+        app:destination="@id/logs_fragment"
+        app:enterAnim="@anim/fragment_enter"
+        app:exitAnim="@anim/fragment_exit"
+        app:popEnterAnim="@anim/fragment_enter_pop"
+        app:popExitAnim="@anim/fragment_exit_pop" />
+    <action
+        android:id="@+id/action_repo_fragment"
+        app:destination="@id/repo_fragment"
+        app:enterAnim="@anim/fragment_enter"
+        app:exitAnim="@anim/fragment_exit"
+        app:popEnterAnim="@anim/fragment_enter_pop"
+        app:popExitAnim="@anim/fragment_exit_pop" />
+    <action
+        android:id="@+id/action_modules_fragment"
+        app:destination="@id/modules_fragment"
+        app:enterAnim="@anim/fragment_enter"
+        app:exitAnim="@anim/fragment_exit"
+        app:popEnterAnim="@anim/fragment_enter_pop"
+        app:popExitAnim="@anim/fragment_exit_pop" />
 </navigation>
