--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -80,7 +80,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:clipToPadding="false"
+            android:fadeScrollbars="true"
             android:paddingTop="104dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
             app:borderTopVisibility="whenTop"
             app:borderTopDrawable="@null"
             app:borderBottomVisibility="never"
