[app] Nuke markown (#767)

--- a/app/src/main/res/layout/item_repo_readme.xml
+++ b/app/src/main/res/layout/item_repo_readme.xml
@@ -27,6 +27,16 @@
     android:paddingTop="104dp"
     app:fitsSystemWindowsInsets="top|bottom">
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:indeterminate="true"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:showAnimationBehavior="outward"
+        app:hideAnimationBehavior="inward" />
+
     <rikka.widget.borderview.BorderNestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
@@ -35,10 +45,11 @@
         app:borderTopDrawable="@null"
         app:borderBottomVisibility="never">
 
-        <TextView
+        <WebView
             android:id="@+id/readme"
             android:padding="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scrollbars="none" />
     </rikka.widget.borderview.BorderNestedScrollView>
 </FrameLayout>
