[app] Scroll WebView (#776)

--- a/app/src/main/res/layout/item_repo_readme.xml
+++ b/app/src/main/res/layout/item_repo_readme.xml
@@ -35,7 +35,7 @@
         app:borderTopDrawable="@null"
         app:borderBottomVisibility="never">
 
-        <WebView
+        <org.lsposed.manager.ui.widget.ScrollWebView
             android:id="@+id/readme"
             android:padding="16dp"
             android:layout_width="match_parent"
