--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -14,7 +14,6 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
@@ -22,23 +21,14 @@
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#562135">
+    android:viewportHeight="108">
     <group
-        android:scaleX="0.29136494"
-        android:scaleY="0.29136494"
-        android:translateX="29.233978"
-        android:translateY="29.16">
-        <group android:translateY="141.67969">
-            <path
-                android:pathData="M44,-0L9,-0L9,-110L19,-110L19,-9L44,-9L44,-0Z"
-                android:fillColor="#562135" />
-            <path
-                android:pathData="M101,-8.15625Q101,-4.5625,98.734375,-2.28125Q96.484375,0,92.84375,0L65.15625,0Q61.59375,0,59.296875,-2.28125Q57,-4.5625,57,-8.15625L57,-35L67,-35L67,-9L91,-9L91,-34.5L60.203125,-71.765625Q57,-75.625,57,-80.265625L57,-101.84375Q57,-105.4375,59.296875,-107.71875Q61.59375,-110,65.15625,-110L92.84375,-110Q96.484375,-110,98.734375,-107.71875Q101,-105.4375,101,-101.84375L101,-77L91,-77L91,-101L67,-101L67,-78.5L97.9375,-41.234375Q101,-37.53125,101,-32.890625L101,-8.15625Z"
-                android:fillColor="#562135" />
-            <path
-                android:pathData="M163,-52.15625Q163,-48.59375,160.70312,-46.296875Q158.40625,-44,154.84375,-44L129,-44L129,0L119,0L119,-110L154.84375,-110Q158.40625,-110,160.70312,-107.71875Q163,-105.4375,163,-101.84375L163,-52.15625ZM153,-53L153,-101L129,-101L129,-53L153,-53Z"
-                android:fillColor="#562135" />
-        </group>
+        android:scaleX="2"
+        android:scaleY="2"
+        android:translateX="30"
+        android:translateY="30">
+        <path
+            android:fillColor="@color/ic_launcher_foreground"
+            android:pathData="M17.73,12.02l3.98,-3.98c0.39,-0.39 0.39,-1.02 0,-1.41l-4.34,-4.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-3.98,3.98L8,2.29C7.8,2.1 7.55,2 7.29,2c-0.25,0 -0.51,0.1 -0.7,0.29L2.25,6.63c-0.39,0.39 -0.39,1.02 0,1.41l3.98,3.98L2.25,16c-0.39,0.39 -0.39,1.02 0,1.41l4.34,4.34c0.39,0.39 1.02,0.39 1.41,0l3.98,-3.98 3.98,3.98c0.2,0.2 0.45,0.29 0.71,0.29 0.26,0 0.51,-0.1 0.71,-0.29l4.34,-4.34c0.39,-0.39 0.39,-1.02 0,-1.41l-3.99,-3.98zM12,9c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM7.29,10.96L3.66,7.34l3.63,-3.63 3.62,3.62 -3.62,3.63zM10,13c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1zM12,15c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1zM14,11c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM16.66,20.34l-3.63,-3.62 3.63,-3.63 3.62,3.62 -3.62,3.63z" />
     </group>
 </vector>
