--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -19,4 +19,7 @@
 
 <resources>
     <color name="color_primary">@color/color_primary_dark</color>
+
+    <color name="ic_launcher_foreground">@color/material_pink_300</color>
+    <color name="ic_launcher_background">@color/material_light_blue_50</color>
 </resources>
